# disaster-routing

./: .gitignore  .pre-commit-config.yaml  README.md  out.edgelist  pyproject.toml  routing.py
.github/workflows/: lint.yml  run-ilp-small.yml  run-large-1.yml  run-large-2.yml  run-large-3.yml  run-large-4.yml  run-medium.yml  run-small.yml  run.yml
disaster_routing/: main.py
disaster_routing/conf/: default.yaml
disaster_routing/conflicts/: check.py  config.py  conflict_graph.py  fpga.py  ga.py  mofi.py  npm.py  odsa.py  solver.py
disaster_routing/eval/: config.py  evaluator.py  relative.py  weighted_sum.py
disaster_routing/exact/: CDP.py  DP.py  HCDP.py  read_input_from_stdin.py
disaster_routing/ilp/: cdp.py
disaster_routing/instances/: generate.py  instance.py  modulation.py  request.py
disaster_routing/optimize/: best.py  perm_ga.py  perm_npm.py
disaster_routing/placement/: config.py  (+5 more)
dr_native/: Cargo.toml  pyproject.toml
instances/: .gitignore  nsfnet-0010-04.json  nsfnet-0010-05.json  nsfnet-0010-09.json  nsfnet-0010-10.json  nsfnet-0020-01.json  nsfnet-0020-05.json  nsfnet-0020-08.json  nsfnet-0020-09.json  nsfnet-0030-01.json  nsfnet-0030-02.json  nsfnet-0030-07.json  nsfnet-0030-08.json  nsfnet-0030-10.json  nsfnet-0040-02.json  nsfnet-0040-05.json  nsfnet-0040-06.json  nsfnet-0040-09.json  nsfnet-0050-02.json  nsfnet-0050-03.json  nsfnet-0050-05.json  nsfnet-0050-06.json  nsfnet-0050-09.json  nsfnet-0100-01.json  nsfnet-0100-05.json  nsfnet-0100-06.json  nsfnet-0100-09.json  nsfnet-0100-12.json  nsfnet-0100-14.json  nsfnet-0100-16.json  nsfnet-0100-20.json  nsfnet-10-1.json  nsfnet-10-2.json  nsfnet-10-3.json  nsfnet-10-6.json  nsfnet-10-7.json  nsfnet-10-8.json  nsfnet-100-10.json  nsfnet-100-11.json  nsfnet-100-13.json  (+31 more)
scripts/: .gitignore  README.md  clear_pkl.sh  collect_logs.py  excel_utils.py  extract_log.py  extract_results.jq  gen_instance.py  generate.sh  open_temp.sh  open_temp_csv.sh  process_results.py  run_all.sh  run_ls.sh  run_sga.sh  run_twophase.sh  scenario2.py  scenario3.py  scenario4.py  scenarios.py  scenarios_slide.py
(+239 files in other folders)
