[project]
name = "disaster-routing"
version = "0.1.0"
description = "Disaster Routing for Elastic Optical Network experiments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.3.0",
]

[tool.pyright]
typeCheckingMode = "recommended"
reportAny = "none"
reportExplicitAny = "none"
