[project]
name = "disaster-routing"
version = "0.1.0"
description = "Disaster Routing for Elastic Optical Network experiments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "hydra-joblib-launcher>=1.2.0",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.3.0",
    "scipy>=1.15.3",
    "scipy-stubs>=1.15.3.0",
    "types-networkx>=3.5.0.20250610",
]

[tool.pyright]
typeCheckingMode = "recommended"
reportAny = "none"
reportExplicitAny = "none"

[dependency-groups]
dev = [
    "fs>=2.4.16",
    "jq>=1.9.1",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "pyyaml>=6.0.2",
    "xlsxwriter>=3.2.5",
]
